--- a/hoikuen.html
+++ b/hoikuen.html
@@ -42,7 +42,7 @@
 
     </div>
     <div id="map"></div>
-    <td><div id="sidebar"></div></td>
+    <!-- <td><div id="sidebar"></div></td> -->
     <script src="constants_hoikuen.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyDVFt8okenp_b8Wz5T6pR6hVi9BziqC-4E&callback=initMap" async defer></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
